--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Erick Tornero page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Erick</strong>, master's student<br />
-					computer science at UCSP<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Erick Tornero</strong></h1>
+					<p>I am a peruvian master's student <br/>of 
+					computer science at <br/>San Pablo Catholic University (UCSP), <br/>Arequipa.</p>
+					<br><strong><font color=" #f0f0fc">erickdeivy01@gmail.com</font></strong><br/>
 				</div>
 			</header>
 
@@ -29,16 +30,21 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<!--<h2>Ipsum lorem dolor aliquam ante commodo<br />
+							magna sed accumsan arcu neque.</h2>-->
+							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p> I am Interested in Deep Learning Research, especially feel enthusiastic about research in Deep Reinforcement Learning and Robotics. Currently, I am currently working as part of my master's thesis, about whether a quadrotor can learn a policy that allows it to fly and that is robust to the total loss of a rotor.</p>
+						<!--<p>I am Interested in Deep Learning Research, I am especially enthusiastic about the development of new algorithms in the Reinforcement Learning Framework. Currently, I am working with this kind of algorithms as part of my Master Thesis at San Pablo Catholic University.</p>-->
+
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://github.com/erickTornero/Model-based-Quadrotor" class="button">Learn More</a></li>
 						</ul>
 					</section>
+					<hr>
 
 				<!-- Two -->
+					<!--
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
@@ -62,27 +68,18 @@
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul>-->
 					</section>
 
 				<!-- Three -->
+					<!--
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
+						<p>If you want to know more about me, please send me a mail.</p>-->
+						<!--<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -103,7 +100,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										+51 984 762 231
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
@@ -111,7 +108,16 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						--><!--
+							<div class="inner">
+							<ul class="icons">
+								<li><a href="https://twitter.com/erickTorneroT" class="icon brands fa-twitter" style="font-size: 3.0em;"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/erickTornero" class="icon brands fa-github" style="font-size: 3.0em;"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ericktornero/" class="icon brands fa-linkedin-in" style="font-size: 3.0em;"><span class="label">Linkedin</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope" style="font-size: 3.0em;"><span class="label">Email</span></a></li>
+							</ul>
+							</div>
+						</div>-->
 					</section>
 
 				<!-- Four -->
@@ -441,7 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://twitter.com/erickTorneroT" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/erickTornero" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ericktornero/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:erickdeivy01@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Erick Tornero</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
