[add] information about projects

--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
 						<!--<p>I am Interested in Deep Learning Research, I am especially enthusiastic about the development of new algorithms in the Reinforcement Learning Framework. Currently, I am working with this kind of algorithms as part of my Master Thesis at San Pablo Catholic University.</p>-->
 
 						<ul class="actions">
-							<li><a href="https://github.com/erickTornero/Model-based-Quadrotor" class="button">Learn More</a></li>
+							<li><a href="docs/cv.pdf" class="button"><font color="  #4646b4">My CV</font></a></li>
 						</ul>
 					</section>
 					<hr>
 
 				<!-- Two -->
-					<!--
+					
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/ffree_point_traj.gif" class="image fit thumb"><img src="images/ffree_point_traj.gif" alt="" /></a>
+								<a href="https://github.com/erickTornero/Model-based-Quadrotor"><h3>Model-Based Quadrotor</h3></a>
+								<a href="https://github.com/erickTornero/Model-based-Quadrotor"><p>Full model-based with quadrotor, faulted rotor and Fault free rotor, experiments and more information can be found in github repository.</p></a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/reinforce-1e-4vs1e-3.png" class="image fit thumb"><img src="images/reinforce-1e-4vs1e-3.png" alt="" /></a>
+								<a href="https://github.com/erickTornero/rl-baselines"><h3>RL-baselines</h3></a>
+								<a href="https://github.com/erickTornero/rl-baselines"><p>In progress work, implementation of various of reinforcement-learning algorithms.</p></a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!--<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -67,11 +67,11 @@
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article>-->
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>-->
+							<li><a href="https://twitter.com/erickTorneroT" class="button">Full Portfolio</a></li>
+						</ul>
 					</section>
 
 				<!-- Three -->
@@ -444,10 +444,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/erickTorneroT" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/erickTornero" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/ericktornero/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-						<li><a href="mailto:erickdeivy01@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/erickTorneroT" class="icon brands fa-twitter" style="font-size: 2.0em;"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/erickTornero" class="icon brands fa-github" style="font-size: 2.0em;"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ericktornero/" class="icon brands fa-linkedin-in" style="font-size: 2.0em;"><span class="label">Linkedin</span></a></li>
+						<li><a href="#" class="icon solid fa-envelope" style="font-size: 2.0em;"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Erick Tornero</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
