[mod] full portfolio link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							</article>-->
 						</div>
 						<ul class="actions">
-							<li><a href="https://twitter.com/erickTorneroT" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/erickTornero" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
