[add] third & fourth project

--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
 								<a href="https://github.com/erickTornero/rl-baselines"><h3>RL-baselines</h3></a>
 								<a href="https://github.com/erickTornero/rl-baselines"><p>In progress work, implementation of various of reinforcement-learning algorithms.</p></a>
 							</article>
-							<!--<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/serrucho.png" class="image fit thumb"><img src="images/serrucho.png" alt="" /></a>
+								<a href="https://github.com/erickTornero/Camera-Calibration"><h3>Camera Calibration with Concentric Ring Patterns</h3></a>
+								<a href="https://github.com/erickTornero/Camera-Calibration"><p>The purpose of this work is to get the intrinsic parameters of a camera using an modified iterative method proposed by Ankur et. al.</p></a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>-->
+								<a href="images/image-processing.png" class="image fit thumb"><img src="images/image-processing.png" alt="" /></a>
+								<a href="https://github.com/erickTornero/Image-Processing"><h3>Simple Image Processing Algorithms</h3></a>
+								<a href="https://github.com/erickTornero/Image-Processing"><p>Simple image-processing application in QT, Cuda&C++, operation such convolutions, polinomial filters, fourier transform, etc.</p></a>
+							</article>
+							
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/erickTornero" class="button">Full Portfolio</a></li>
