[add] ico -</br>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	 <link rel="shortcut icon" href="images/uav3.ico">
 	<head>
 		<title>Erick Tornero page</title>
 		<meta charset="utf-8" />
@@ -18,8 +19,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Erick Tornero</strong></h1>
-					<p>I am a peruvian master's student <br/>of 
-					computer science at <br/>San Pablo Catholic University (UCSP), <br/>Arequipa.</p>
+					<p>I am a peruvian master's student of 
+					computer science at San Pablo Catholic University (UCSP), Arequipa.</p>
 					<br><strong><font color=" #f0f0fc">erickdeivy01@gmail.com</font></strong><br/>
 				</div>
 			</header>
