--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 					<h1><strong>Erick Tornero</strong></h1>
 					<p>I am a peruvian master's student of 
 					computer science at San Pablo Catholic University (UCSP), Arequipa.</p>
-					<br><strong><font color=" #f0f0fc">erick.tornero@ucsp.edu.pe</font></strong><br/>
 				</div>
 			</header>
 
@@ -39,7 +38,7 @@
 						<!--<p>I am Interested in Deep Learning Research, I am especially enthusiastic about the development of new algorithms in the Reinforcement Learning Framework. Currently, I am working with this kind of algorithms as part of my Master Thesis at San Pablo Catholic University.</p>-->
 						<div class="buttons-container">
 							<ul class="actions">
-								<li><a href="docs/cv.pdf" class="button"><font color="  #4646b4">My CV</font></a></li>
+								<li><a href="https://ericktornero.github.io" class="button"><font color="  #4646b4">My CV</font></a></li>
 							</ul>
 							<ul class="actions">
 								<li><a href="https://ericktornero.github.io/blog" class="button"><font color="  #4646b4">Research Blog</font></a></li>
@@ -452,7 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://twitter.com/erickTorneroT" class="icon brands fa-twitter" style="font-size: 2.0em;"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/erickTornero" class="icon brands fa-github" style="font-size: 2.0em;"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/ericktornero/" class="icon brands fa-linkedin-in" style="font-size: 2.0em;"><span class="label">Linkedin</span></a></li>
+						<li><a href="#" class="icon brands fa-linkedin-in" style="font-size: 2.0em;"><span class="label">Linkedin</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope" style="font-size: 2.0em;"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
