--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<li><a href="https://ericktornero.github.io" class="button"><font color="  #4646b4">My CV</font></a></li>
 							</ul>
 							<ul class="actions">
-								<li><a href="https://ericktornero.github.io/blog" class="button"><font color="  #4646b4">Research Blog</font></a></li>
+								<li><a href="#" class="button"><font color="  #4646b4">Research Blog</font></a></li>
 							</ul>
 						</div>
 					</section>
